# algo_geo_exo_final

./: CMakeLists.txt  CMakeSettings.json  Hohneck.txt  README.md  affichage.cpp  affichage.h  carte.cpp  carte.h  createObj.cpp  createObj.h  main.cpp  point.cpp  point.h  texture.mtl  triangulation.cpp  triangulation.h
